<resources>
    <string name="app_name">Feed My Wallet</string>
    <string name="action_settings">action</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>

    <string name="t_ng_s_d_kh_d_ng">Tổng số dư khả dụng</string>
    <string name="moneyHolder">2,000,000</string>
    <string name="account">account</string>

    <string name="slider_1_title">Phân tích chi tiêu</string>
    <string name="slider_1_desc">Bạn đã chi tiêu những gì trong tháng qua, trong tuần qua? Đâu là khoản chi lớn nhất? Sử dụng chức năng phân tích chi tiêu để biết rõ hơn</string>

    <string name="slider_2_title">Lập dự đoán chi tiêu</string>
    <string name="slider_2_desc">Luôn tiêu hết tiền trước khi nhận khoản tiếp theo? Hãy tạo mới một khoản dự đoán chi tiêu, và để Feed My Wallet gợi ý chi tiêu cho bạn</string>

    <string name="slider_3_title">Rà soát chi tiêu</string>
    <string name="slider_3_desc">Tạo thói quen rà soát chi tiêu là một phần cần thiết để bước đầu nắm vững nguồn tài chính của bạn.</string>
    <string name="download">Thêm nhanh một giao dịch mới</string>
    <string name="downloadIcon">download</string>
    <string name="addNewTrans">addNewTrans</string>
    <string name="t_o_m_i_m_t_giao_d_ch">Tạo mới một giao dịch</string>
    <string name="thu_chi_th_ng">Thu chi Tháng</string>
    <string name="thu_nh_p">Thu nhập</string>
    <string name="defaultIncome">+3.000.000</string>
    <string name="percentage">65%</string>
    <string name="s_d_ng">Sử dụng</string>
    <string name="defaultOutcome">-2.500.000</string>
    <string name="defaultPercentageOutcome">35%</string>
    <string name="vnd">VND</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptywallet">emptyWallet</string>
    <string name="b_n_ch_a_t_budget_n_o_c">Bạn chưa đặt Budget nào cả !</string>
    <string name="extended_fab_content_desc">add new budget</string>
    <string name="extended_fab_label">Thêm budget</string>
    <string name="vi_t_nam_ng_vnd">Việt Nam Đồng VND</string>
    <string name="dollar_m_usd">Dollar Mỹ USD</string>
    <string name="y_n_nh_t">Yên Nhật</string>
    <string name="th_m">Thêm</string>
    <string name="label">textView</string>
    <string name="sotien">Số tiền</string>
    <string name="tenBudget">Tên Budget</string>
    <string name="luongBudget">Số tiền</string>
    <string name="ch_n_n_v_ti_n_t">Chọn đơn vị tiền tệ</string>
    <string name="ngayBD">Ngày bắt đầu</string>
    <string name="ngayKT">Ngày kết thúc</string>
    <string name="ghichu">Ghi chú</string>
    <string name="v_ti_n">Ví tiền</string>
    <string name="textview">TextView</string>
    <string name="qu_n_l_budget">Quản lí Budget</string>
    <string name="loading">Loading</string>
    <string name="category">Category</string>
    <string name="t_n_giao_d_ch">Tên giao dịch</string>
    <string name="lo_i_giao_d_ch">Loại giao dịch</string>
    <string name="transDate">Ngày giao dịch</string>
    <string name="transname">TransName</string>
    <string name="transnote">TransNote</string>
    <string name="ch_a_c_giao_d_ch_n_o_c">Chưa có giao dịch nào cả!</string>
    <string name="giao_d_ch">Giao dịch trong ngày</string>
    <string name="_100">100%</string>
    <string name="ch_a_c_giao_d_ch_n_o">Chưa có giao dịch nào</string>
    <string name="t_i_kho_n">Tài khoản</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="t_t_c"><u>Tất cả</u></string>
    <string name="title_activity_all_transactions">AllTransactions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="t_t_c_v">Tất cả ví</string>
    <string name="h_m_nay">Hôm nay</string>
    <string name="save_edit">save_edit</string>
    <string name="l_u">Lưu</string>
    <string name="x_a">Xóa</string>
    <string name="th_m_v">Thêm ví</string>
    <string name="logo">logo</string>
    <string name="b_t_u">Bắt đầu</string>
    <string name="ng_nh_p_c_th_truy_c_p_v_o_tr_nh_qu_n_l_chi_ti_u_c_a_b_n">Đăng nhập để có thể truy cập vào trình quản lý chi tiêu của bạn</string>
    <string name="ch_a_c_t_i_kho_n">Chưa có tài khoản?</string>
    <string name="ng_k_ngay">Đăng kí ngay</string>
    <string name="nh_t_i_kho_n">Nhớ tài khoản</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="m_t_kh_u">Mật khẩu</string>

</resources>