<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="false"
        android:alpha="0.45"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        android:tintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_2"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/b_t_u"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/ng_nh_p_c_th_truy_c_p_v_o_tr_nh_qu_n_l_chi_ti_u_c_a_b_n"
        app:layout_constraintEnd_toEndOf="@+id/tv_start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_start" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ch_a_c_t_i_kho_n"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/txSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_k_ngay"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        app:layout_constraintTop_toTopOf="@+id/tv_2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/ng_nh_p"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/ip6"
        app:layout_constraintTop_toBottomOf="@+id/ip6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ip5"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_1"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/t_i_kho_n"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ip6"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="@+id/ip5"
        app:layout_constraintStart_toStartOf="@+id/ip5"
        app:layout_constraintTop_toBottomOf="@+id/ip5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txPwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/m_t_kh_u"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>