<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Slider_2">

    <ImageView
        android:id="@+id/iv_slide2"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_marginTop="190dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_slide1_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_2" />

    <TextView
        android:id="@+id/tv_slide2_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/slider_2_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_slide2"
        app:layout_constraintStart_toStartOf="@+id/iv_slide2"
        app:layout_constraintTop_toBottomOf="@+id/iv_slide2" />

    <TextView
        android:id="@+id/tv_slide2_desc"
        android:layout_width="243dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/slider_2_desc"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_slide2"
        app:layout_constraintStart_toStartOf="@+id/iv_slide2"
        app:layout_constraintTop_toBottomOf="@+id/tv_slide2_tittle" />

    <Button
        android:id="@+id/btn_slide2"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:backgroundTint="#4F378B"
        android:contentDescription="@string/next"
        app:icon="@drawable/navigate_next"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_slide2_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_slide2_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_slide2_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>